# adams-leaf

./: .gitignore  Cargo.toml  Makefile  config.example.json  perf.data  perf.data.old  test_graph.json
data/config/: default.yaml  finetune.yaml
data/network/: trap.yaml  typical.yaml
data/streams/: clamp-motiv-heavy.yaml  clamp-motiv-mid.yaml  clamp-motiv-reconf.yaml  full-motiv-heavy.yaml  full-motiv-light.yaml  full-motiv-mid.yaml  full-motiv-reconf.yaml  generate.sh  half-motiv-heavy.yaml  half-motiv-light.yaml  half-motiv-mid.yaml  motiv-heavy.yaml  motiv-light.yaml  motiv-mid.yaml  motiv-reconf.yaml  scale-motiv-light.yaml  scale-motiv-mid.yaml  scaled-motiv-heavy.yaml  scaled-motiv-reconf.yaml  test-motiv-heavy.yaml  test-motiv-mid.yaml  test-motiv-reconf.yaml
plot/: Makefile  fig-5-1.gpi  fig-5-2.gpi  fig-5-3.gpi  filter-time.sh  summarize.sh
src/: cnc.rs  lib.rs  main.rs
src/algorithm/: aco.rs  aco_routing.rs  adams_ants.rs  algorithm.rs  ants.rs  mod.rs  ro.rs  spf.rs
src/component/: cost.rs  decision.rs  evaluator.rs  flowtable.rs  gcl.rs  mod.rs  oldnewtable.rs  solution.rs  wrapper.rs
src/graph_util/: stream_aware_graph.rs
src/network/: memorizing.rs  mod.rs  network.rs  streamaware.rs  topology.rs
src/network_wrapper/: mod.rs
src/routing_algos/: routing_optimism.rs  shortest_path.rs
src/scheduler/: gatectrllist.rs  mod.rs  runtime_reconf.rs  scheduler.rs
src/util/: aco.rs  dijkstra.rs  yens_algo.rs
src/utils/: config.rs  error.rs  json.rs  mod.rs  stream.rs  yaml.rs
tests/: integration_test.rs
utils/: stat.sh  stat2.sh
(+15 files in other folders)
