[package]
name = "adams_leaf"
version = "0.1.0"
authors = ["DavidYo <lturtsamuel@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand_chacha = "0.3.0"
rand_pcg = "0.3.0"
ordered-float = "2.1.1"
priority-queue = "1.0.5"
enum_dispatch = "0.3.5"
hashbrown = "0.9.1"
argh = "0.1.4"
num = "0.4.0"
itertools = "0.10.0"

[lib]
doctest = false

[features]
batch-eval = []
