[package]
name = "adams-leaf"
version = "1.1.1"
authors = ["DavidYo <lturtsamuel@gmail.com>", "RedBug312 <redbug312@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.8.3", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
rand_chacha = "0.3.0"
ordered-float = "2.1.1"
priority-queue = "1.0.5"
enum_dispatch = "0.3.5"
hashbrown = "0.9.1"
num = "0.4.0"
itertools = "0.10.0"
serde_yaml = "0.8.17"
docopt = "1.1.1"

[dependencies.vebtrees]
path = "lib/rust-vebtrees"

[lib]
doctest = false

[features]
batch-eval = []
